--- a/css/style.css
+++ b/css/style.css
@@ -293,3 +293,25 @@ section.badges .container hr{
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+.navbar-expand-md .navbar-nav .nav-link{
+    font-size: 0.8rem;
+}
+
+.dropdown-item:hover, .dropdown-item:focus{
+    background-color: #1e2b33;
+    color: white;
+}
+
+.badge .title{
+    color: black;
+    font-size: 1.5rem;
+    font-family: play-regular;
+}
+
+.badge img{
+    /* width: 100%; */
+    /* height: 200px; */
+    max-width: 100%;
+    margin-top: 50px;
+}
